Added the section Appointment

--- a/style.css
+++ b/style.css
@@ -158,3 +158,55 @@ border-radius: 60px;
     line-height: 24px;
     top: 12px;
 }
+/* Shairgul 
+.container{
+  width: 1440px;
+  margin: 0 auto;
+  display: flex;
+  padding: 130px 100px 130px 100px;
+ 
+}
+
+.appointment-form{
+  margin-left: 50px;
+  width: 600px;  
+}
+
+.appointment-title{
+font-style: normal;
+font-weight: normal;
+font-size: 70px;
+line-height: 80px;
+color: rgba(34, 34, 34, 1);
+}
+
+input[name="book-now"]{
+height: 56px;
+width: 150px;
+left: 750px;
+border-radius: 60px;
+width: 150px;
+height: 56px;
+background: #1D79E4;
+margin-top: 48px;
+}
+
+input[name="fullname"]{
+  margin-right: 24px;
+}
+
+input[name="date"]{
+  margin-right: 24px;
+}
+
+select{
+  margin: 35px 25px 40px 0px;
+  padding: 4px 0px 4px 0px;
+  width: 250px;    
+}
+
+input{
+  width: 256px;
+  padding: 4px 0 4px 0px;
+  margin-bottom: 35px;
+}*/ 
