--- a/style.css
+++ b/style.css
@@ -158,7 +158,8 @@ border-radius: 60px;
     line-height: 24px;
     top: 12px;
 }
-/* Shairgul 
+
+
 .container{
   width: 1440px;
   margin: 0 auto;
@@ -209,4 +210,4 @@ input{
   width: 256px;
   padding: 4px 0 4px 0px;
   margin-bottom: 35px;
-}*/ 
+}
