--- a/style.css
+++ b/style.css
@@ -1,213 +1,52 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+.title
+{
+    font-family: Reem Kufi;
+    font-style: Regular;
+    font-size: 70px;
+    Line height: 80px;
+    Line height: 76%;
+    
 }
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Red Hat Text', sans-serif;
-  font-size: 14px;
-}
-
-.container {
-  width: 1110px;
-  margin: 0 auto;
-  padding: 0 15px;
-	
-}
-
-.section-title {
-  margin: 0;
-  margin-bottom: 25px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 43px;
-  color: #000000;
-}
-
-.top-screen {
-  position: absolute;
-width: 1348px;
-height: 800px;
-left: 0px;
-top: 0px;
-background-image: url("images/top-bg.jpg");
-background-repeat: no-repeat;
-background-position: center;
-background-size: cover;
-color: #fff;
-}
-
-.logo {
-position: absolute;
-width: 109px;
-height: 40px;
-left: 107.06px;
-top: 50px;
-font-family: Reem Kufi;
-font-style: normal;
-font-weight: normal;
-font-size: 36px;
-line-height: 40px;
-}
-
-	.logo::before {
-    content: "";
-    background-image: url(images/rectangle.png);
+.frame
+{
     position: absolute;
-    width: 40px;
-    height: 40px;
-    left: -11px;
-  
+    width: 132px;
+    height: 20px;
+    left: 300;
+    left: 600px;
+    top: 165px;
 }
 
-.menu {
-display: flex;
-justify-content: center;
-margin: 0 30px 0 0;
-padding: 0;
-list-style: none;
-position: absolute;
-width: 500px;
-height: 24px;
-left: 475.5px;
-top: 58px;
-}
-
-.menu-item + .menu-item {
-  margin-left: 40px;
-}
-
-.menu-link {
-    font-style: normal;
-    font-size: 18px;
-    line-height: 24px;
-    color: #FFFFFF;
-    text-decoration: none;
-		display: inline-block;
-}
-
-.menu-link active {
-	font-weight: 500;
-}
-
-.fas {
-	position: absolute;
-right: -300px;
-width: 60px;
-height: 60px;
-
-}
-
-.hero {
-  width: 730px;
-  margin: 0 auto;
-  text-align: left;
-}
-
-.hero-title {
-
-position: absolute;
-width: 750px;
-height: 150px;
-left: 100px;
-top: 200px;
-font-family: Reem Kufi;
-font-style: normal;
-font-weight: normal;
-font-size: 90px;
-line-height: 110px;
-}
-
-.hero-descr {
-position: absolute;
-width: 537px;
-height: 90px;
-left: 100px;
-top: 500px;
-font-family: Red Hat Text;
-font-style: normal;
-font-weight: normal;
-font-size: 18px;
-line-height: 30px;
-}
-
-.hero-btn {
-position: absolute;
-width: 217px;
-height: 56px;
-left: 100px;
-top: 650px;
-background: #1D79E4;
-border-radius: 60px;
-}
-
-.btn {
-	position: absolute;
-    width: 153px;
-    height: 24px;
-    left: 30px;
+.content
+{
+    position: absolute;
+    width: 786.76px;
+    height: 120px;
+    left: 326.62px;
+    top: 250px;
     font-family: Red Hat Text;
-    text-decoration: none;
-    color: white;
-    font-weight: 500;
     font-style: normal;
+    font-weight: normal;
     font-size: 18px;
-    line-height: 24px;
-    top: 12px;
+    line-height: 30px;
+    text-align: center;
+    color: #555555;
 }
-
-
-.container{
-  width: 1440px;
-  margin: 0 auto;
-  display: flex;
-  padding: 130px 100px 130px 100px;
- 
+.photo
+{
+    
+    position: absolute;
+    width: 517.83px;
+    height: 127.83px;
+    left: 461px;
+    top: 400px;
+    display: flex;
+    justify-content: space-around;
 }
-
-.appointment-form{
-  margin-left: 50px;
-  width: 600px;  
-}
-
-.appointment-title{
-font-style: normal;
-font-weight: normal;
-font-size: 70px;
-line-height: 80px;
-color: rgba(34, 34, 34, 1);
-}
-
-input[name="book-now"]{
-height: 56px;
-width: 150px;
-left: 750px;
-border-radius: 60px;
-width: 150px;
-height: 56px;
-background: #1D79E4;
-margin-top: 48px;
-}
-
-input[name="fullname"]{
-  margin-right: 24px;
-}
-
-input[name="date"]{
-  margin-right: 24px;
-}
-
-select{
-  margin: 35px 25px 40px 0px;
-  padding: 4px 0px 4px 0px;
-  width: 250px;    
-}
-
-input{
-  width: 256px;
-  padding: 4px 0 4px 0px;
-  margin-bottom: 35px;
+.photo_inner
+{
+    width: 500px; ;
+    height: 130px; ;
+    border-radius: 150px;
+    background-color: blue;
 }
